[package]
name = "imgui_styles"
version = "0.2.0"
edition = "2021"
authors = ["Viktor Polevoi <maintainer@vpolevoy.com>"]
description = "A collection of immediate gui themes"
readme = "README.md"
license = "MIT"
keywords = ["imgui", "egui", "themes", "styles"]
categories = ["gui", "visualization"]
repository = "https://github.com/vityafx/imgui_styles"
documentation = "https://docs.rs/imgui_styles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = { version = "0.11", features = ["docking"] }

[package.metadata.docs.rs]
all-features = true
